// Vitest Snapshot v1

exports[`should be rendered correctly (ol) 1`] = `
<ol
  class="css-ygswl4-listStyle"
>
  <li
    class="css-1xiymud-Li"
  >
    item 1
  </li>
  <li
    class="css-1xiymud-Li"
  >
    item 2
  </li>
  <li
    class="css-1xiymud-Li"
  >
    item 3
  </li>
</ol>
`;

exports[`should be rendered correctly (ul) 1`] = `
<ul
  class="css-ygswl4-listStyle"
>
  <li
    class="css-1xiymud-Li"
  >
    item 1
  </li>
  <li
    class="css-1xiymud-Li"
  >
    item 2
  </li>
  <li
    class="css-1xiymud-Li"
  >
    item 3
  </li>
</ul>
`;
